# cfs

./: README.md  pyproject.toml  pytest.ini  requirements.txt  runtests.sh
cfs/: cashflows.py  cashflows_tests.py  simulation.py  simulation_tests.py
